// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-chip-delete default 1`] = `
<m-chip-delete>
  Chip delete
</m-chip-delete>
`;

exports[`Storyshots modul-components|m-chip-delete disabled 1`] = `
<m-chip-delete
  disabled="true"
>
  Disabled
</m-chip-delete>
`;

exports[`Storyshots modul-components|m-chip-delete small 1`] = `
<m-chip-delete
  size="small"
>
  Chip delete
</m-chip-delete>
`;
